Replace com.google.common.base.Function (partly) (#2121)
Mostly replace use of Guava functional expressions with Java streams and functions.

---------

Co-authored-by: Kirill Peshin <kirill.peshin@bsc-ideas.com>